wordpress-with-mysql-stack/mysql-with-pv-stack.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: mysql
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    run: mysql
status:
  loadBalancer: {}
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mysql
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: password123
        - name: MYSQL_DATABASE
          value: wordpress
        image: mariadb:latest
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: db-sample-scripts
          mountPath: /db-scripts
      volumes:
      - name: db-sample-scripts
        configMap:
          name: db-sample-scripts
      - name: mysql-data
        # hostPath: 
        #   path: /tmp/mysql
        persistentVolumeClaim:
          claimName: mysql-pvc-claim
status: {}
