wordpress-with-mysql-stack/wordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: wordpress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: wordpress
status:
  loadBalancer: {}
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: wordpress
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      run: wordpress
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: wordpress
    spec:
      containers:
      - image: wordpress
        name: wordpress
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 50m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 100Mi
        volumeMounts:
        - name: wp-data
          mountPath: /var/www/html
      volumes:
      - name: wp-data
        hostPath:
          path: /tmp/wp-data/
status: {}
