wordpress-with-mysql-stack/wp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wp-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wordpress.search.com
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress
              servicePort: 80
